tests/testdata/test/report_error.out
running 2 tests from [WILDCARD]/report_error.ts
foo ...
Uncaught error from [WILDCARD]/report_error.ts FAILED
foo ... cancelled (0ms)
bar ... cancelled (0ms)

 ERRORS 

[WILDCARD]/report_error.ts (uncaught error)
error: Error: foo
  reportError(new Error("foo"));
              ^
    at [WILDCARD]/report_error.ts:2:15
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

[WILDCARD]/report_error.ts (uncaught error)

FAILED | 0 passed | 3 failed ([WILDCARD])

error: Test failed
